fixed overflow issue

--- a/public/style.css
+++ b/public/style.css
@@ -8,7 +8,8 @@ body,
 body > div {
   height: 100vh;
   width: 100vw;
-  overflow: hidden;
+  overflow-x: hidden;
+  overflow-y: scroll;
 }
 
 #site_title {
